--- a/mod/turningtech/css/style.css
+++ b/mod/turningtech/css/style.css
@@ -2,7 +2,7 @@
 	text-align: center;
 }
 .device_table {
-  width: %80;
+  width: 80%;
   cellspacing: 1;
   cellpadding: 5;
 }
@@ -55,11 +55,13 @@ div.block_turningpoint h2 {
   color: #00f;
   background-color: #00f;
   margin-top: 2em;
-  margin-bottom: 2emp;
+  margin-bottom: 2em;
 }
 
 p.no-devices {
 	color: #f00;
+	    margin-left: 10%;
+    margin-right: 10%
 }
 
 div.form-container {
@@ -156,14 +158,13 @@ p.responseware-join-link {
   width: 185px;
 }
 
-p.tt_delete_device, 
-p.tt_confirm_device_delete {
+p.tt_delete_device, p.tt_confirm_device_delete {
   text-align: center;
 }
 
 div.tt_import_session_form {
-  width: 800px;
-  margin-left:25%;
+	width: 800px;
+	margin-left:25%;
 }
 
 
@@ -178,3 +179,277 @@ div.tt_rw_form_item .fitem {
 div.tt_rw_form_item .fitem .fitemtitle {
   width: 120px;
 }
+/*New Styles*/
+/*By Akhil;10-03-2012; Start*/
+.general_tables{
+background:#FFFFFF;
+width:100% ;
+}
+.general_tables table{
+background:#FFFFFF;
+width:100%;
+text-align:left;
+}
+
+.header{
+background:#EDEDED;
+color:#000000;
+text-decoration:none;
+padding:10px;
+text-align:left;
+}
+.header a{
+color:#000000;
+text-decoration:none;
+}
+.header a:hover{
+color:#000000;
+text-decoration:underline;
+}
+
+general_tables th{
+color:#000000;
+text-decoration:none;
+
+}
+/* .header a{
+color:#000000;
+text-decoration:none;
+font-weight:normal;
+font-size:16px;
+text-transform:uppercase;
+text-align:left;
+}
+*/
+.cell a{
+color:#000000;
+text-decoration:none;
+font-weight:normal;
+font-size:14px;
+text-align:left;
+
+}
+.cell{
+padding:10px;
+}
+.r0{
+border-bottom-width:1px;
+border-bottom-color:#CCCCCC;
+border-bottom-style:solid;
+}
+.r1{
+border-bottom-width:1px;
+border-bottom-color:#CCCCCC;
+border-bottom-style:solid;
+}
+.lastrow{
+border-bottom-width:3px;
+border-bottom-color:#CCCCCC;
+border-bottom-style:solid;
+}
+.device_tables{
+background:#FFFFFF;
+width:90%;
+margin-left:5%;
+margin-bottom:0px;
+}
+#myoutercontainer{
+ background: url(../images/tt_background.png);
+ height:65px;
+ width:100%;
+ font-size:18px;
+ text-align:left;
+ float:left;
+ font-weight:bold;
+ display:block;
+}
+#myinnercontainer {margin-top:20px;margin-left:5%; }
+
+.SubLinks{
+width:90%;
+margin-left:5%;
+font-size:14px;
+margin-top:20px;
+display:block;
+float:left;
+}
+/*By Akhil;10-03-2012; End*/
+/*By Akhil;11-03-2012;PLMS-168 Start*/
+.ttheader {
+ background: url(../images/tt_background.png);
+ height:65px;
+ width:80%;
+ font-size:18px;
+ text-align:center;
+ float:left;
+ font-weight:bold;
+ display:block;
+ margin-left: 10%;
+ margin-right: 10%;
+}
+#divEnterId {
+    color: #7D6666;
+    display: block;
+    width: 80%;
+    float: left;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+.divDeviceSearch {
+    display: inline;
+    float: left;
+    margin-left: 10%;
+    margin-right: 10%;
+    width: 90%;
+}
+.divDeviceSearchButton {
+    display: block;
+    padding-left: 10%;
+    margin-right: 10%;
+    text-align: left;
+    width: 350px;
+    text-align: right;
+}
+
+#divSearchResult {
+    width: 100%;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    display: none;
+    float: left;
+}
+#tblResult {
+    width: 100%;
+}
+#txtDeviceId {
+    margin-left: 50px;
+    float: right
+}
+.searchTableHead {
+    background: #EDEDED;
+    font-size: 16px;
+}
+.searchTableHead td {
+    width: 25%;
+}
+.tHeader {
+    font-size: 18px;
+}
+
+#btnDelete {
+    margin-left: 2px;
+    margin-top: 1%;
+}
+
+tr.searchRow td{
+border-top-width:1px;
+border-top-color:#CCCCCC;
+border-top-style:solid;
+}
+
+/*By Akhil;10-04-2012,10-08-2012,10-09-2012;PLMS-167:RegisterDevice Fix Start*/
+ .hiddens { display: none; }
+ .unhidden { display: block; }
+ .noWrap{ white-space: nowrap;}
+ .floatRight{ float: right;}
+ .floatLeft{ float: left;}
+ .font22 {
+     font-size: 22px;
+ }
+ .font18 {
+     font-size: 18px;
+ }
+ .font14 {
+     font-size: 14px;
+ }
+ .font16 {
+     font-size: 16px;
+ }
+ .font20 {
+     font-size: 20px;
+ }
+ .font18Bold {
+     font-size: 18px;
+     font-weight: bold;
+ }
+ .font14Bold {
+     font-size: 14px;
+     font-weight: bold;
+ }
+ #divDeviceReg {
+     text-align: center; display: block; width: 100%; float: left;
+ }
+ #tblResponseDevices {
+     width: 60%; text-align: center;font-size: 16px; margin: 0px;padding: 0px;
+ }
+ #tblDeviceDisplay {
+     width: 40%; text-align: center;font-size: 16px; margin: 0px;padding: 0px;
+ }
+ .tHeadDevReg {
+     width: 50%;font-weight: bold;font-size: 16px
+ }
+ .cancelDeleteDiv {
+     display: inline;
+     margin-left: 10px;
+ }
+ .displayNone {
+     display: none;
+ }
+ .displayInline {
+     display: inline;
+ }
+ #txtResponseCard_1 {
+     height: 20px; width: 100px;font-size: 14px;
+ }
+ #txtResponseWare_1 {
+     height: 20px; width: 100px;font-size: 14px;
+ }
+ #divLower {
+     display: block;text-align: center;margin: 50px;width: 100%;
+ }
+ #spnDeviceReg {
+     font-weight: bold;font-size: 18px;
+ }
+ #lnkResponseCard {
+     margin-left: 20%;white-space: nowrap;font-weight: bold;float: left;text-align: left;
+ }
+ #spnMessage {
+     color: red;text-align: right;float: right;display: none;font-size: 16px;
+ }
+ #txtRegisterDeviceId {
+     width: 180px;height: 20px;
+ }
+ #btnRegisterRC {
+     width: 100px;height: 25px;
+ }
+ #lnkResponseWare {
+     margin-left: 20%;white-space: nowrap;font-weight: bold;float: left;text-align: left;
+ }
+ #spnResWareHeading {
+     font-size:20px;text-align: left;float: left;margin-left: 20%;white-space: nowrap;
+ }
+ #spnResponseWareMessage {
+     color: red;display: none;font-size: 16px;text-align: left;float: left;margin-left: 20%;white-space: nowrap;
+ }
+ .messageRed {
+     color: red;display: none;
+ }
+ #btnRegisterRW {
+     height: 20px;width: 100px;
+ }
+ .textAlignLeft {
+     text-align: left;
+ }
+  .textAlignRight {
+     text-align: right;
+ }
+   .textAlignCenter {
+     text-align: center;
+ }
+ #txtResponseWareEmail {
+     width: 150px;height: 20px;
+ }
+ #txtResponseWarePassword {
+     width: 150px;height: 20px;
+ }
+/*By Akhil;10-04-2012,10-08-2012,10-09-2012;PLMS-167:RegisterDevice Fix End*/
